--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ env:
     - DM_MAPFILE="ministation"
     - DM_MAPFILE="birdstation"
     - DM_MAPFILE="pubbystation"
+    - DM_MAPFILE="deltastation"
     - DM_MAPFILE="templates"
 
 
